tooling/tree-sitter-hexa/test/corpus/basic.txt
==================
empty function
==================

fn main() {}

---

(program
  (function_declaration
    name: (identifier)
    parameters: (parameter_list)
    body: (block)))

==================
function with typed parameters and return type
==================

fn add(a: i64, b: i64) -> i64 {
    return a + b
}

---

(program
  (function_declaration
    name: (identifier)
    parameters: (parameter_list
      (parameter name: (identifier) type: (primitive_type))
      (parameter name: (identifier) type: (primitive_type)))
    return_type: (primitive_type)
    body: (block
      (return_statement
        (binary_expression
          left: (identifier)
          right: (identifier))))))

==================
let binding with mut and string literal
==================

let mut greeting: string = "hello\n"

---

(program
  (let_declaration
    name: (identifier)
    type: (primitive_type)
    value: (string_literal
      (string_content)
      (escape_sequence))))

==================
array type and array literal
==================

let xs: [i64] = [1, 2, 3]

---

(program
  (let_declaration
    name: (identifier)
    type: (array_type (primitive_type))
    value: (array_literal
      (integer_literal)
      (integer_literal)
      (integer_literal))))

==================
if / else with comparison
==================

fn pick(x: i64) -> i64 {
    if x > 0 {
        return x
    } else {
        return 0
    }
}

---

(program
  (function_declaration
    name: (identifier)
    parameters: (parameter_list
      (parameter name: (identifier) type: (primitive_type)))
    return_type: (primitive_type)
    body: (block
      (if_statement
        condition: (binary_expression
          left: (identifier)
          right: (integer_literal))
        consequence: (block
          (return_statement (identifier)))
        alternative: (block
          (return_statement (integer_literal)))))))

==================
while loop with assignment
==================

fn count() {
    let mut i: i64 = 0
    while i < 10 {
        i = i + 1
    }
}

---

(program
  (function_declaration
    name: (identifier)
    parameters: (parameter_list)
    body: (block
      (let_declaration
        name: (identifier)
        type: (primitive_type)
        value: (integer_literal))
      (while_statement
        condition: (binary_expression
          left: (identifier)
          right: (integer_literal))
        body: (block
          (assignment_statement
            left: (identifier)
            right: (binary_expression
              left: (identifier)
              right: (integer_literal))))))))

==================
try / catch with lint annotation
==================

fn safe() -> i64 {
    let mut r: i64 = 0
    try { r = to_int("42") } catch e {}   // @allow-silent-catch
    return r
}

---

(program
  (function_declaration
    name: (identifier)
    parameters: (parameter_list)
    return_type: (primitive_type)
    body: (block
      (let_declaration
        name: (identifier)
        type: (primitive_type)
        value: (integer_literal))
      (try_statement
        try_body: (block
          (assignment_statement
            left: (identifier)
            right: (call_expression
              function: (identifier)
              arguments: (argument_list (string_literal (string_content))))))
        error_binding: (identifier)
        catch_body: (block))
      (line_comment)
      (return_statement (identifier)))))

==================
member call chain
==================

let n = raw.trim().len()

---

(program
  (let_declaration
    name: (identifier)
    value: (call_expression
      function: (member_expression
        object: (call_expression
          function: (member_expression
            object: (identifier)
            property: (identifier))
          arguments: (argument_list))
        property: (identifier))
      arguments: (argument_list))))

==================
line comment at module top
==================

// header comment
let X = 1

---

(program
  (line_comment)
  (let_declaration
    name: (identifier)
    value: (integer_literal)))

==================
boolean literal in let binding
==================

let active: bool = true
let stale = false

---

(program
  (let_declaration
    name: (identifier)
    type: (primitive_type)
    value: (boolean_literal))
  (let_declaration
    name: (identifier)
    value: (boolean_literal)))

==================
decorator on function declaration
==================

@test
fn check_smoke() {
    return
}

---

(program
  (function_declaration
    (decorator name: (identifier))
    name: (identifier)
    parameters: (parameter_list)
    body: (block
      (return_statement))))

==================
multiple decorators on function
==================

@test
@deprecated
fn legacy_path(a: i64) -> i64 {
    return a
}

---

(program
  (function_declaration
    (decorator name: (identifier))
    (decorator name: (identifier))
    name: (identifier)
    parameters: (parameter_list
      (parameter name: (identifier) type: (primitive_type)))
    return_type: (primitive_type)
    body: (block
      (return_statement (identifier)))))
